--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         }
     ],
     "require": {
-        "php": "^7.2|^7.3|^7.4|^8.0",
+        "php": "^7.2|^7.3|^7.4|^8.0|^8.1|^8.2",
         "illuminate/database": "^8.0|^9.0|^10.0|^11.0|^12.0",
         "illuminate/auth": "^8.0|^9.0|^10.0|^11.0|^12.0"
     },
